# nomad_python_web_scrapper

./: main.py  pyproject.toml  python.csv
extractors/: indeed.py  wwr.py
